--- a/src/css/buttons.css
+++ b/src/css/buttons.css
@@ -1,5 +1,27 @@
 /* Formas y tamanos de los botones */
-.buttonC {
-    border-radius: 50px;
-    border: 3px solid black;
+.btnC {
+    width: 100px;
+    height: 100px;
+    background-repeat: no-repeat;
+    background-size:50px 50px;
+    background-position: center;
+    background-image: url(/src/assets/create.png);
+}
+
+.btnP {
+    width: 100px;
+    height: 100px;
+    background-repeat: no-repeat;
+    background-size: 50px 50px;
+    background-position: center;
+    background-image: url(/src/assets/control.png);
+}
+
+.btnBgImg {
+    width: 100px;
+    height: 100px;
+    background-image: url(/src/assets/iconQuiz.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 90px 90px;
 }
